--- a/package/metadata.desktop
+++ b/package/metadata.desktop
@@ -1,5 +1,38 @@
 [Desktop Entry]
 Name=Video
+Name[ast]=Video
+Name[ca]=Video
+Name[ca@valencia]=Video
+Name[cs]=Video
+Name[da]=Video
+Name[de]=Video
+Name[en_GB]=Video
+Name[es]=Video
+Name[et]=Video
+Name[fi]=Video
+Name[fr]=Video
+Name[gd]=Video
+Name[gl]=Video
+Name[it]=Video
+Name[ko]=Video
+Name[nb]=Video
+Name[nl]=Video
+Name[nn]=Video
+Name[pl]=Video
+Name[pt]=Video
+Name[pt_BR]=Video
+Name[ru]=Video
+Name[sk]=Video
+Name[sl]=Video
+Name[sr]=Video
+Name[sr@ijekavian]=Video
+Name[sr@ijekavianlatin]=Video
+Name[sr@latin]=Video
+Name[sv]=Video
+Name[uk]=Video
+Name[x-Video]=xxVideoxx
+Name[zh_CN]=视频
+Name[zh_TW]=視頻
 
 Type=Service
 Icon=plasma
